# scholar_ai

./: .gitignore  README.md
.venv-app/: pyvenv.cfg
backend/: pyproject.toml
backend/app/: __init__.py  config.py  main.py  repository.py
backend/app/api/: routes.py
backend/app/db/: models.py
backend/app/features/: contribution_rules.md
backend/app/prompts/: contribution_intent.md
backend/app/queue/: jobs.py
backend/app/schemas/: citation.py  graph.py  review.py
backend/app/services/classification/: rules.py  service.py
backend/app/services/export/: service.py
backend/app/services/graph/: service.py
backend/app/services/ingest/: service.py
backend/app/services/parsers/: bibtex.py  docx.py  latex.py  pdf.py
backend/app/services/providers/: cache.py  crossref.py  openalex.py
backend/app/services/resolution/: service.py
backend/app/workers/: mlx.py  run_job.py
backend/tests/: test_graph_export.py  test_parsers.py  test_pipeline.py
docs/: architecture.md  output-schema.md  paper-reference-system-design.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: citation-review-table.tsx  export-panel.tsx  review-workbench.tsx  summary-cards.tsx  upload-panel.tsx
frontend/src/lib/: types.ts
ops/local/: README.md
ops/mlx/: README.md
